--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '30.0.0 rc1'
 
     defaultConfig {
-        applicationId "com.vipapp.webmark2"
+        applicationId "com.mcal.webstudio"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 6
